bug fixes for service job
