# smrt-server-link/src/main/scala/com/pacbio/secondary/smrtlink/analysis/datasets/DataSetUtils.scala
@@ -1,11 +1,15 @@
 package com.pacbio.secondary.smrtlink.analysis.datasets
 
 import java.nio.file.Path
-import java.util.UUID
+import java.text.SimpleDateFormat
+import javax.xml.datatype.DatatypeFactory
+import java.util.{UUID, Calendar}
 
 import scala.util.{Failure, Success, Try}
 import scala.collection.JavaConverters._
 import scala.collection.immutable.TreeSet
+
+import org.joda.time.{DateTime => JodaDateTime}
 import com.typesafe.scalalogging.LazyLogging
 
 import com.pacificbiosciences.pacbiodatasets._
@@ -422,9 +426,23 @@ trait DataSetFilterUtils extends DataSetParentUtils {
       DataSetLoader.loadSubreadSet(dsFile)
     }
     addFilters(ds, filters)
-    ds.setName(dsName.getOrElse(s"${ds.getName} (filtered)"))
+    val timeStamp = new SimpleDateFormat("yyMMdd_HHmmss")
+      .format(Calendar.getInstance().getTime)
+    def toTimeStampName(n: String) = s"${n}_$timeStamp"
+    val createdAt = DatatypeFactory
+      .newInstance()
+      .newXMLGregorianCalendar(new JodaDateTime().toGregorianCalendar)
     setParent(ds, ds) // the original dataset becomes the parent
+    val name = dsName.getOrElse(s"${ds.getName} (filtered)")
+    val timeStampName = toTimeStampName(name.toLowerCase)
+    ds.setCreatedAt(createdAt)
+    ds.setName(name)
+    ds.setTimeStampedName(timeStampName)
     ds.setUniqueId(UUID.randomUUID().toString)
+    val tags = if (ds.getTags != "") {
+      TreeSet((ds.getTags.split(',') ++ Seq("copied")): _*)
+    } else Seq("copied")
+    ds.setTags(tags.toList.mkString(","))
     DataSetWriter.writeSubreadSet(ds, outputFile)
     ds
   }
